fix(scroll-bar): remove constraint for custom scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -12,21 +12,19 @@ code {
         monospace;
 }
 
-@media screen and (min-width: 1181px) {
-    ::-webkit-scrollbar {
-        height: 6px;
-        width: 6px;
-        opacity: 0;
-    }
+::-webkit-scrollbar {
+    height: 6px;
+    width: 6px;
+    opacity: 0;
+}
 
-    ::-webkit-scrollbar-track {
-        -webkit-border-radius: 3px;
-        border-radius: 3px;
-        opacity: 0;
-    }
-    ::-webkit-scrollbar-thumb {
-        -webkit-border-radius: 3px;
-        border-radius: 3px;
-        background: #00000033;
-    }
+::-webkit-scrollbar-track {
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+    opacity: 0;
+}
+::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+    background: #00000033;
 }
